<resources>
    <string name="app_name">Smart Health Care</string>
    <string name="app_login">Login</string>
    <string name="app_kit">Medi Kit Details</string>
    <string name="app_signup">Sign Up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_logout">Logout</string>
    <string name="action_map">Map</string>
    <string name="action_notification">Notification</string>
    <string name="email_address">Email Address</string>
    <string name="userfirstname_signup">First Name</string>
    <string name="userlastname_signup">Last Name</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="need_a_new_account">Need a new account?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstaidfrag">First Aid Fragment</string>
    <string name="easy_first_aid_solution">Easy First-Aid Solution</string>
    <string name="action_search">Search</string>

    <string-array name="size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="qty_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


    <!--API KEY-->
    <string name="api_key">AIzaSyDuFW_FH0MH0nWJkbFLenMIzFlawEHyoAM</string>
    <string name="confirm">Confirm</string>
    <string name="Confirm_Order">Confirm Order</string>
    <string name="error_no_internet_connection">No internet connection!. Check your internet connection and try again</string>
    <string name="age">Age</string>
    <string name="address">Addess</string>
    <string name="number">Mobile Number</string>
    <string name="rfidCode">RFID Code</string>
    <string name="username_signup">Email ID</string>
    <string name="available_location">Available Locations</string>
    <string name="close">Close</string>
    <string name="FCM_MSG">com.example.sharaaf_nazeer.easycleanandroidapplication.fcm_msg</string>
    <string name="FCM_DATE">com.example.sharaaf_nazeer.easycleanandroidapplication.fcm_date</string>
    </resources>
