<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="edu.smarthealthcare.smarthealthcareapp.Fragments.FragmentMyAccount">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="24dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txt_first_name_prof"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/userfirstname_signup"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txt_last_name_prof"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/userlastname_signup"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txt_user_email_prof"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:editable="false"
                        android:focusable="false"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="5dp"
                    android:textSize="18sp"/>

                <RadioGroup
                    android:id="@+id/radioGroupGenderProf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <RadioButton
                        android:id="@+id/radio_male_Prof"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/radio_female_Prof"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:text="Female" />

                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txt_user_age_prof"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/age"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txt_user_address_prof"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/address"
                        android:maxLines="5"
                        android:maxLength="150"
                        android:inputType="text"
                        android:singleLine="false"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txt_user_phone_prof"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/number"
                        android:maxLines="1"
                        android:maxLength="10"
                        android:inputType="number"
                        android:singleLine="true"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txt_user_rfid_prof"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/rfidCode"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txt_user_password_prof"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="70dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txt_user_confirm_password_prof"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/password_confirm"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:paddingBottom="2dp"
                android:paddingEnd="24dp"
                android:layout_gravity="bottom"
                android:paddingStart="24dp">

                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/btnUpdateProf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:text="Update"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:pb_colorComplete="@color/material_green"
                    app:pb_colorError="@color/red_error"
                    app:pb_colorNormal="@color/colorPrimary"
                    app:pb_colorPressed="@color/colorPrimaryDark"
                    app:pb_colorProgress="@android:color/white"
                    app:pb_textComplete="Updated"
                    app:pb_textError="Update Failed"
                    app:pb_textProgress="Updating" />


            </LinearLayout>

        </android.support.design.widget.CoordinatorLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
